<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="led_settings">LED ON/OFF</string>
    <string name="button_on">ON</string>
    <string name="button_off">OFF</string>
    <string name="barometer">Barometer Data</string>
    <string name="button_read">Read</string>
    <string name="button_write">Write</string>
    <string name="button_pre">Pre Flight</string>

    //Pre-Flight Screen
    <string name="flight">Flight Control</string>
    <string name="sensors_state">State:</string>
    <string name="sensors_connected">All sensors connected</string>
    <string name="sensor_disconnected">Sensor disconnected</string>
    <string name="button_arm">Arm</string>
    <string name="button_launch">Launch</string>
    <string name="button_check">Check Sensors</string>
    <string name="set_pressure">Sea Level Pressure:</string>
    <string name="set_2_apogee">Second Deployment Altitude:</string>
    <string name="edit_SLP_message">Edit Sea Level Pressure:</string>
    <string name="edit_2apogee_message">Edit Second Deployment Altitude:</string>
    <string name="button_send">Send</string>
    <string name="button_set">Set Second Deployment</string>

    //In-flight Screen
    <string name="in_flight">In Flight</string>
    <string name="button_find">Find Device</string>

    //Post Flight Screen
    <string name="post_flight">Post Flight</string>
    <string name="get_data">Get Data</string>
    <string name="button_post_flight">Post Flight</string>
    <string name="current_data">Current Data</string>
    
    //Graph
    <string name="button_graph">Graph</string>
    <string name="graph_title">Altimeter Graph</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
